fix find and replace textboxes vertical spacing in desktop

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/source/editors/text/findreplace/FindReplaceBar.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/source/editors/text/findreplace/FindReplaceBar.css
@@ -11,10 +11,6 @@
    margin-right: 3px;
 }
 
-.findReplaceBar .gwt-CheckBox input {
-   margin-top: 0 !important;
-}
-
 .findReplaceBar .gwt-CheckBox {
    margin-top: 1px;
    font-size: 9px;
@@ -34,7 +30,7 @@
 }
 
 .checkboxLabel {
-   margin-top: 2px;
+   margin-top: 4px;
    margin-right: 8px;
    font-size: 9px;
 }
